# ha-termoweb

./: .gitignore  AGENTS.md  DEBUG.md  README.md  hacs.json  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: hassfest.yml  pytest.yml  tests.yml
custom_components/termoweb/: __init__.py  api.py  backends.py  binary_sensor.py  boost.py  button.py  client.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  energy.py  entity.py  fallback_translations.py  heater.py  heater_inventory.py  hourly_poller.py  i18n.py  identifiers.py  installation.py  inventory.py  lock.py  manifest.json  nodes.py  number.py  runtime.py  select.py  sensor.py  services.yaml  strings.json  switch.py  throttle.py  util.py  utils.py  ws_client.py  ws_client_legacy.py  ws_client_v2.py  ws_shared.py
custom_components/termoweb/assets/: INSTALL.md  install_termoweb_card.sh  termoweb_schedule_card.js
custom_components/termoweb/backend/: __init__.py  base.py  debug.py  ducaheat.py  ducaheat_ws.py  factory.py  rest_client.py  sanitize.py  termoweb.py  termoweb_ws.py  ws_client.py  ws_health.py
custom_components/termoweb/codecs/: __init__.py  common.py  ducaheat_codec.py  ducaheat_models.py  ducaheat_planner.py  ducaheat_read_models.py  termoweb_codec.py  termoweb_models.py
custom_components/termoweb/domain/: __init__.py  commands.py  energy.py  ids.py  inventory.py  legacy_view.py  state.py  view.py
custom_components/termoweb/entities/: __init__.py  binary_sensor.py  button.py  climate.py  entity.py  heater.py  lock.py  number.py  sensor.py  switch.py
custom_components/termoweb/planner/: __init__.py  ducaheat_planner.py
custom_components/termoweb/services/: __init__.py  energy_history.py  ws_debug_probe.py
custom_components/termoweb/translations/: bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  hr.json  hu.json  it.json  lt.json  lv.json  nb.json  nl.json  pl.json  pt-PT.json  ro.json  ru.json  sk.json  sl.json  sv.json  tr.json  uk.json
docs/: README.md  architecture.md  codex_tasks_inventory.md  design_contract.md  developer-notes.md  ducaheat_api.md  ducaheat_openapi.yaml  function_map.txt  legacy_removal.md  termoweb_api.md  termoweb_openapi.yaml  test_failure_recovery_plan.md  v2_refactor_status.md
docs/archive/: legacy_removal.md  test_failure_recovery_plan.md  v2_refactor_status.md
scripts/: auto_translate.py  generate_function_map.py  prepare_release.py  run-ha  setup
tests/: conftest.py  test_api.py  test_api_ensure_prog.py  test_api_ensure_ptemp.py  test_api_ensure_temperature.py  test_api_request_text_failure.py  test_backend_base.py  test_backend_ducaheat.py  test_backend_factory.py  test_backend_package_lazy_import.py  test_backend_ws_client_module.py  test_backends.py  test_binary_sensor_button.py  test_boost_additional.py  test_client_helpers.py  test_climate.py  test_codec_placeholders_removed.py  test_config_flow.py  test_const.py  test_coordinator.py  test_coordinator_assemble_device_record.py  test_coordinator_clone_inventory.py  test_coordinator_collect_previous_settings.py  test_coordinator_instant_power.py  test_coordinator_inventory_addresses.py  test_coordinator_normalise_settings_map.py  test_diagnostics.py  test_domain_ids.py  test_domain_inventory.py  test_domain_state.py  test_domain_state_store.py  test_domain_view.py  test_ducaheat.py  test_ducaheat_acm_writes.py  test_ducaheat_boost_metadata_merge.py  test_ducaheat_brand_headers_defaults.py  test_ducaheat_capabilities_filters.py  test_ducaheat_capabilities_merge.py  test_ducaheat_codec.py  test_ducaheat_nodes.py  (+98 more)
tests/frontend/: test_schedule_card.py
tests/js/: test_termoweb_schedule_card.mjs
